# windows11_Settings_App

windows11_Settings/: CMakeLists.txt  Main.qml  icon.rc  main.cpp  res.qrc  returncurrentindex.cpp  returncurrentindex.h
windows11_Settings/js/: AccountDetails.js  BlueRect.js  CustomArrow.js  CustomSwitch.js  ResizeImg.js  ResizeLeftBarImg.js  SearchBarHandler.js  TitleBarHandler.js
windows11_Settings/qml/: DevicesComponents.qml  DevicesModels.qml  DevicesTopBar.qml  LeftBarHandler.qml  ListViewComponents.qml  ListViewModels.qml  MainWindowFrame.qml  NetworkComponents.qml  NetworkModels.qml  NetworkTopBar.qml  RListViewComponents.qml  RListViewModels.qml  RightBarHandler.qml  SettingsTitle.qml  SystemTopBar.qml  ToDo.qml  WindowHandler.qml
